syntax = "proto3";
package shop;

message Book {
  string title = 1;
  string author = 2;
}

message CD {
  string title = 1;
  string artist = 2;
}

message BorrowRequest {
  oneof borrowed {
    Book book = 1;
    CD cd = 2;
  }
}
