syntax = "proto3";
package library;

import "book.proto";

service Library {
  rpc BorrowBook(BorrowBookRequest) returns (BorrowBookResponse) {}
}

message Person {
  string name = 1;
}

message BorrowBookRequest {
  Person person = 1;
  Book book = 2;
}

message BorrowBookResponse {
  string message = 1;
}
